--- a/index.html
+++ b/index.html
@@ -132,6 +132,22 @@
 								</div>
 								<p class="work-title">-  Biogen | Neurological, Autoimmune and Rare Diseases</p>
 							</li>
+							<li>
+								<div>
+									<label>
+										<a href="#">Novi-Check</a>
+									</label> Cordova App
+								</div>
+								<p class="work-title">-  Novi-Check | Application pour jeune diabétique</p>
+							</li>
+							<li>
+								<div>
+									<label>
+										<a href="#">SelfDeploy</a>
+									</label> AngularJS and ROR
+								</div>
+								<p class="work-title">SelfDeploy, le portail de self-provisionning de LINKBYNET, reçoit le trophée de la « Meilleure offre européenne de Cloud hybride » lors du VMworld Europe 2014</p>
+							</li>
 						</ul>
 					</div>
 				</div>
