--- a/index.html
+++ b/index.html
@@ -374,6 +374,16 @@
 					</li>
 					<li>
 						<div class="method">
+							<span class="method-name">ReactJS</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-0"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
 							<span class="method-name">Jquery</span>
 							<span class="method-value">
 								<i class="fa fa-star"></i>
@@ -536,7 +546,7 @@
 							<span class="method-name">NodeJS</span>
 							<span class="method-value">
 								<i class="fa fa-star"></i>
-								<i class="fa fa-star-o"></i>
+								<i class="fa fa-star"></i>
 								<i class="fa fa-star-o"></i>
 							</span>
 						</div>
