--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 							<span class="method-value">
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
-								<i class="fa fa-star-0"></i>
+								<i class="fa fa-star-o"></i>
 							</span>
 						</div>
 					</li>
