--- a/index.html
+++ b/index.html
@@ -79,13 +79,25 @@
 							<li>
 								<div class="work-location">
 									<label>
-										<a href="http://seta-international.com/">Sutrix Solutions</a>
+										<a href="http://sutrixgroup.com/">Sutrix Solutions</a>
 									</label>
 									<span class="pull-right">
-										<i class="fa fa-calendar-o"></i> &nbsp; 2014-now
+										<i class="fa fa-calendar-o"></i> &nbsp; 2014-2016
 									</span>
 								</div>
 								<p class="work-title">- FrontEnd team leader</p>
+							</li>
+							
+							<li>
+								<div class="work-location">
+									<label>
+										<a href="http://www.terralogic.com/">Terralogic Inc.</a>
+									</label>
+									<span class="pull-right">
+										<i class="fa fa-calendar-o"></i> &nbsp; 2016-now
+									</span>
+								</div>
+								<p class="work-title">- Senior Software Engineer</p>
 							</li>
 						</ul>
 					</div>
