--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
 								<div class="method">
 									<span class="method-name">Code editor</span>
 									<span class="method-value">
-										<b class="danger">Sublime Text</b>
+										<b class="danger">Sublime Text</b>,
+										<b class="danger">Visual Studio Code</b>
 									</span>
 								</div>
 							</li>
@@ -262,7 +263,7 @@
 								<div class="method">
 									<span class="method-name">Computer</span>
 									<span class="method-value">
-										<i class="fa fa-laptop"></i> MD322
+										<i class="fa fa-laptop"></i> MF840
 									</span>
 								</div>
 							</li>
