--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<a href="http://emotiv.com/">Emotiv</a>
 									</label>
 									<span class="pull-right">
-										<i class="fa fa-calendar-o"></i> &nbsp; 2011-now
+										<i class="fa fa-calendar-o"></i> &nbsp; 2013-now
 									</span>
 								</div>
 								<p class="work-title">- Web developer (fullstack)</p>
@@ -94,7 +94,7 @@
 										<a href="http://www.terralogic.com/">Terralogic Inc.</a>
 									</label>
 									<span class="pull-right">
-										<i class="fa fa-calendar-o"></i> &nbsp; 2016-now
+										<i class="fa fa-calendar-o"></i> &nbsp; 2016
 									</span>
 								</div>
 								<p class="work-title">- Senior Software Engineer</p>
