--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<i class="fa-li fa fa-envelope-o"></i><a href="mailto:mutikeo@gmail.com">mutikeo@gmail.com</a>
 							</li>
 							<li>
-								<i class="fa-li fa fa-skype"></i>mutikeo1
+								<i class="fa-li fa fa-skype"></i><a href="skype:mutikeo1?add">mutikeo1</a>
 							</li>
 						</ul>
 						<div class="clearfix"></div>
@@ -94,7 +94,7 @@
 										<a href="http://www.terralogic.com/">Terralogic Inc.</a>
 									</label>
 									<span class="pull-right">
-										<i class="fa fa-calendar-o"></i> &nbsp; 2016
+										<i class="fa fa-calendar-o"></i> &nbsp; 2016-now
 									</span>
 								</div>
 								<p class="work-title">- Senior Software Engineer</p>
