--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 								<div>
 									<label>
 										<a href="http://emotiv.com/">Emotiv</a>
-									</label> Bitrix, Wordpress and Slimframework
+									</label>Fullstack developer: Bitrix, Wordpress and Slimframework
 								</div>
 								<p class="work-title">- Wearables for the brain! The most credible, research grade mobile EEG systems on the market. Research, self assessment, cognitive performance.</p>
 							</li>
@@ -116,7 +116,7 @@
 								<div>
 									<label>
 										<a href="http://nhakhokygui.vn/">Consignista</a>
-									</label> FrontEnd and ZendFW
+									</label> FrontEnd developer: PHP, AngularJS
 								</div>
 								<p class="work-title">- Consignista – nhakhokygui.vn</p>
 							</li>
@@ -124,7 +124,7 @@
 								<div>
 									<label>
 										<a href="http://woodmace.plantsys.co.uk/plant/">Woodmace</a>
-									</label> AngularJS and HTML/CSS
+									</label> FrontEnd developer: Java, AngularJS
 								</div>
 								<p class="work-title">- Woodmace - Civil Engineering and Groundworks Contractors in Poole, Dorset</p>
 							</li>
@@ -132,7 +132,7 @@
 								<div>
 									<label>
 										<a href="https://financialservices.coles.com.au/insurance">Wesfarmers</a>
-									</label> Frontend team leader: AngularJS, HTML/LESS
+									</label> FrontEnd team leader: Java, AngularJS
 								</div>
 								<p class="work-title">- Car, Home, Landlord and Life Insurance Quotes - Coles Insurance</p>
 							</li>
@@ -140,7 +140,7 @@
 								<div>
 									<label>
 										<a href="#">Biogen</a>
-									</label> Cordova App
+									</label> FrontEnd developer: AngularJS, Cordova App
 								</div>
 								<p class="work-title">-  Biogen | Neurological, Autoimmune and Rare Diseases</p>
 							</li>
@@ -148,7 +148,7 @@
 								<div>
 									<label>
 										<a href="#">Novi-Check</a>
-									</label> Cordova App
+									</label> FrontEnd team leader: AngularJS, Cordova App
 								</div>
 								<p class="work-title">-  Novi-Check | Application pour jeune diabétique</p>
 							</li>
@@ -156,9 +156,17 @@
 								<div>
 									<label>
 										<a href="#">SelfDeploy</a>
-									</label> AngularJS and ROR
+									</label> FrontEnd team leader: AngularJS, ROR
 								</div>
 								<p class="work-title">SelfDeploy, le portail de self-provisionning de LINKBYNET, reçoit le trophée de la « Meilleure offre européenne de Cloud hybride » lors du VMworld Europe 2014</p>
+							</li>
+							<li>
+								<div>
+									<label>
+										<a href="#">Frankly Worldnow</a>
+									</label> Senior Software Engineer: .NET, NodeJS, ReactJS
+								</div>
+								<p class="work-title">The Frankly CMS is an integrated content management system and powerful video creator that lets you organize stories, publish fast, and syndicate.</p>
 							</li>
 						</ul>
 					</div>
