--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								<div>
 									<label>
 										<a href="http://woodmace.plantsys.co.uk/plant/">Woodmace</a>
-									</label> FrontEnd developer: Java, AngularJS
+									</label> FrontEnd developer: AngularJS
 								</div>
 								<p class="work-title">- Woodmace - Civil Engineering and Groundworks Contractors in Poole, Dorset</p>
 							</li>
@@ -132,7 +132,7 @@
 								<div>
 									<label>
 										<a href="https://financialservices.coles.com.au/insurance">Wesfarmers</a>
-									</label> FrontEnd team leader: Java, AngularJS
+									</label> FrontEnd team leader: AngularJS
 								</div>
 								<p class="work-title">- Car, Home, Landlord and Life Insurance Quotes - Coles Insurance</p>
 							</li>
@@ -156,7 +156,7 @@
 								<div>
 									<label>
 										<a href="#">SelfDeploy</a>
-									</label> FrontEnd team leader: AngularJS, ROR
+									</label> FrontEnd team leader: AngularJS
 								</div>
 								<p class="work-title">SelfDeploy, le portail de self-provisionning de LINKBYNET, reçoit le trophée de la « Meilleure offre européenne de Cloud hybride » lors du VMworld Europe 2014</p>
 							</li>
@@ -164,7 +164,7 @@
 								<div>
 									<label>
 										<a href="#">Frankly Worldnow</a>
-									</label> Senior Software Engineer: .NET, NodeJS, ReactJS
+									</label> Senior Software Engineer: NodeJS, ReactJS
 								</div>
 								<p class="work-title">The Frankly CMS is an integrated content management system and powerful video creator that lets you organize stories, publish fast, and syndicate.</p>
 							</li>
