Update link button

--- a/projects/wsms/index.3.html
+++ b/projects/wsms/index.3.html
@@ -59,7 +59,7 @@
           <section class="text-side">
             <img class="img-logo" src="assets/images/WSMS_Logo.png" alt="WSMS Logo" />
             <div class="pull-left group-btn">
-              <button class="btn btn-default">visit site</button>
+              <a href="http://wsmsnyc.org/home/" class="btn btn-default">visit site</a>
               <img class="img-cursive" src="assets/images/WSMS_Cursive.png" alt ="where to begin" />
             </div>
           </section>
@@ -80,7 +80,7 @@
             </figure>
             <img class="img-logo" src="assets/images/WSMSTEP_Logo.png" alt="WSMSTEP Logo" />
             <div class="pull-left group-btn group-btn-2rows">
-              <button class="btn btn-default pull-left">visit site</button>
+              <a href="http://wsmsnyc.org/teachereducation/" class="btn btn-default pull-left">visit site</a>
               <img class="img-cursive" src="assets/images/WSMSTEP_Cursive.png" alt ="to think, not to be thought for" />
             </div>
           </section>
