--- a/projects/wsms/assets/css/index.1.temp.html
+++ b/projects/wsms/assets/css/index.1.temp.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>West Side Montessori School</title>
     <!-- Bootstrap -->
-    <link href="./vendors/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./assets/css/style.3.css" rel="stylesheet">
+    <link href="../../vendors/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./style.1.temp.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -15,32 +15,16 @@
     <style>
       .triangle.bottom:before,
       .triangle.top:after {
-        height: 150px;
+        height: 158px;
       }
     </style>
     <script>
-      // 768: 183
-      // 825: 182
-      // 880: 181
       var updateHeight = function () {
         var rules = document.styleSheets[2];
-        var t = 0;
         for (j = 0; j < rules.cssRules.length; j++) {
           var r = rules.cssRules[j];
           if (r.selectorText.indexOf(".triangle.bottom:before") > -1 || r.selectorText.indexOf(".triangle.bottom::before") > -1 ) {
-            if (window.innerWidth > 1200) {
-              t = 2;
-            }
-            if (window.innerWidth > 1400) {
-              t = 3;
-            }
-            if (window.innerWidth > 1500) {
-              t = 4;
-            }
-            if (window.innerWidth > 1600) {
-              t = 6;
-            }
-            r.style.height = (183 - (window.innerWidth - 768) / 56 - t) + 'px';
+            r.style.height = (158 - (window.innerWidth - 768) / 46) + 'px';
           }
         }
       }
@@ -57,16 +41,15 @@
       <div class="row">
         <div class="col-sm-6 col-xs-12 wsms">
           <section class="text-side">
-            <img class="img-logo" src="assets/images/WSMS_Logo.png" alt="WSMS Logo" />
-            <div class="pull-left group-btn">
-              <a href="http://wsmsnyc.org/home/" class="btn btn-default">visit site</a>
-              <img class="img-cursive" src="assets/images/WSMS_Cursive.png" alt ="where to begin" />
-            </div>
+            <h1 class="with-logo">WSMS</h1>
+            <h3>West Side Montessori School</h3>
+            <i class="hardwriting">...where to begin</i>
           </section>
           <section class="image-side">
             <figure class="triangle bottom">
               <div class="img img-left"></div>
             </figure>
+            <button class="btn btn-default">visit site</button>
           </section>
         </div>
         <div class="col-sm-6 col-xs-12 wsms-tep">
@@ -74,15 +57,15 @@
             <figure class="triangle top">
               <div class="img img-right"></div>
             </figure>
+            <button class="btn btn-default">visit site</button>
           </section>
           <section class="text-side">
             <figure class="triangle bottom">
             </figure>
-            <img class="img-logo" src="assets/images/WSMSTEP_Logo.png" alt="WSMSTEP Logo" />
-            <div class="pull-left group-btn group-btn-2rows">
-              <a href="http://wsmsnyc.org/teachereducation/" class="btn btn-default pull-left">visit site</a>
-              <img class="img-cursive" src="assets/images/WSMSTEP_Cursive.png" alt ="to think, not to be thought for" />
-            </div>
+            <h1 class="with-logo">WSMS-TEP</h1>
+            <h3>West Side Montessori School</h3>
+            <h3>Techer Education Program</h3>
+            <i class="hardwriting">...to think, not to be thought for</i>
           </section>
         </div>
       </div>
