--- a/projects/wsms/index.html
+++ b/projects/wsms/index.html
@@ -7,31 +7,85 @@
     <title>West Side Montessori School</title>
     <!-- Bootstrap -->
     <link href="./vendors/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./assets/css/style.1.css" rel="stylesheet">
-    <style>
-      a {
-        color: #fff;
-        text-decoration: none;
-      }
-      a:hover {
-        color: red;
-        text-decoration: none;
-      }
-    </style>
+    <link href="./assets/css/style.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+      .triangle.bottom:before,
+      .triangle.top:after {
+        height: 150px;
+      }
+    </style>
+    <script>
+      // 768: 183
+      // 825: 182
+      // 880: 181
+      var updateHeight = function () {
+        var rules = document.styleSheets[2];
+        var t = 0;
+        for (j = 0; j < rules.cssRules.length; j++) {
+          var r = rules.cssRules[j];
+          if (r.selectorText.indexOf(".triangle.bottom:before") > -1 || r.selectorText.indexOf(".triangle.bottom::before") > -1 ) {
+            if (window.innerWidth > 1200) {
+              t = 2;
+            }
+            if (window.innerWidth > 1400) {
+              t = 3;
+            }
+            if (window.innerWidth > 1500) {
+              t = 4;
+            }
+            if (window.innerWidth > 1600) {
+              t = 6;
+            }
+            r.style.height = (183 - (window.innerWidth - 768) / 56 - t) + 'px';
+          }
+        }
+      }
+
+      updateHeight();
+
+      window.onresize = function () {
+        updateHeight();
+      }
+    </script>
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row wsms triangle-row top">
-        <h1><a href="./index.1.html">Version 1</a></h1>
-      </div><!-- end .row 1 -->
-
-      <div class="row wsms-tep triangle-row bottom">
-        <h1><a href="./index.2.html">Version 2</a></h1>
-      </div><!-- end .row 2 -->
+      <div class="row">
+        <div class="col-sm-6 col-xs-12 wsms">
+          <section class="text-side">
+            <img class="img-logo" src="assets/images/WSMS_Logo.png" alt="WSMS Logo" />
+            <div class="pull-left group-btn">
+              <a href="http://wsmsnyc.org/home/" class="btn btn-default">visit site</a>
+              <img class="img-cursive" src="assets/images/WSMS_Cursive.png" alt ="where to begin" />
+            </div>
+          </section>
+          <section class="image-side">
+            <figure class="triangle bottom">
+              <div class="img img-left"></div>
+            </figure>
+          </section>
+        </div>
+        <div class="col-sm-6 col-xs-12 wsms-tep">
+          <section class="image-side">
+            <figure class="triangle top">
+              <div class="img img-right"></div>
+            </figure>
+          </section>
+          <section class="text-side">
+            <figure class="triangle bottom">
+            </figure>
+            <img class="img-logo" src="assets/images/WSMSTEP_Logo.png" alt="WSMSTEP Logo" />
+            <div class="pull-left group-btn group-btn-2rows">
+              <a href="http://wsmsnyc.org/teachereducation/" class="btn btn-default pull-left">visit site</a>
+              <img class="img-cursive" src="assets/images/WSMSTEP_Cursive.png" alt ="to think, not to be thought for" />
+            </div>
+          </section>
+        </div>
+      </div>
     </div>
   </body>
 </html>
