--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<a href="http://emotiv.com/">Emotiv</a>
 									</label>
 									<span class="pull-right">
-										<i class="fa fa-calendar-o"></i> &nbsp; 2013-now
+										<i class="fa fa-calendar-o"></i> &nbsp; 2013-2018 (remote work)
 									</span>
 								</div>
 								<p class="work-title">- Web developer (fullstack)</p>
