--- a/index.html
+++ b/index.html
@@ -94,11 +94,23 @@
 										<a href="http://www.terralogic.com/">Terralogic Inc.</a>
 									</label>
 									<span class="pull-right">
-										<i class="fa fa-calendar-o"></i> &nbsp; 2016-now
+										<i class="fa fa-calendar-o"></i> &nbsp; 2016-2019
 									</span>
 								</div>
 								<p class="work-title">- Senior Software Engineer</p>
 							</li>
+<li>
+								<div class="work-location">
+									<label>
+										<a href="https://www.absolute.com/">Absolute Software</a>
+									</label>
+									<span class="pull-right">
+										<i class="fa fa-calendar-o"></i> &nbsp; 2019-now
+									</span>
+								</div>
+								<p class="work-title">- Front End developer</p>
+							</li>
+
 						</ul>
 					</div>
 					<div class="box box-danger">
