--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<div class="box">
 						<h1 class="author">Duc Tran</h1>
 						<h4 class="job-title">Fullstack web developer
-							<a class="pull-right" href="http://mutikeo.github.io/">
+							<a class="pull-right" href="https://mutikeo.com">
 								<small>
 									<u>online version</u>
 								</small>
